cmake_minimum_required(VERSION 3.0)
project(addon)
include_directories(${CMAKE_JS_INC})
include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${CMAKE_SOURCE_DIR}/demo/include)

link_directories(${CMAKE_SOURCE_DIR}/lib)
link_directories(${CMAKE_SOURCE_DIR}/demo/lib)
file(GLOB SOURCE_FILES "speech.cpp")
add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${CMAKE_JS_SRC})
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB})
add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
target_link_libraries(addon alibabacloud-idst-common alibabacloud-idst-speech pthread)
